--- a/austere.html
+++ b/austere.html
@@ -280,12 +280,12 @@ transition: all 0.3s linear;
     font-size:{text:navfontsize};
 }
 .decline1 {
-    height:100px;
+    min-height:100px;
     padding:5px;
     border-left: 2px solid {color:text};
 }
 .decline2 {
-    height:100px;
+    min-height:100px;
     padding:5px;
     border-left: 2px solid {color:text};
 }
