--- a/defensive.html
+++ b/defensive.html
@@ -51,6 +51,7 @@ http://rowrz.tumblr.com/themes
 <meta name="if:InfiniteScroll" content="0"/>
 <meta name="if:DescPagination" content="1"/>
 <meta name="if:2Columns" content="{block:ifnotInfiniteScroll}0{/block:ifnotInfiniteScroll}"/>
+<meta name="if:DescriptionUnderline" content="1"/>
 
 
 <meta name="text:sidefontsize" content="9px"/>
@@ -391,10 +392,14 @@ font-size:10px;}
         <a href="/">{block:ifUseAccountAvi}{block:ShowAvatar}<div class="sideimg sideimg-{AvatarShape}"><img src="{PortraitURL-128}" width="100%" /></div>{/block:ShowAvatar}{/block:ifUseAccountAvi}
             {block:ifnotUseAccountAvi}<img class="sideimg" src="{image:SideImg}"/>{/block:ifnotUseAccountAvi}
         </a>
-        <span class="desc">
-            {Description}
-        </span>
-        <br/>
+        {block:ShowDescription}
+            <span class="desc">
+                {Description}
+                {block:ifDescriptionUnderline}
+                    <hr/>
+                {/block:ifDescriptionUnderline}
+            </span>
+        {/block:ShowDescription}
         <div id="nav">
             {block:ifHomeLink}
                 <a class="nav" href="/">home</a>
