--- a/defensive.html
+++ b/defensive.html
@@ -14,7 +14,7 @@ defensive theme v1.8
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
-<!DOCTYPE html>
+<html>
 <head>
 
 <link rel="alternate" type="application/rss+xml" href="{RSS}"/>
