--- a/defensive.html
+++ b/defensive.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 <!--                                  
 _ __ _____      ___ __ ____        
 | '__/ _ \ \ /\ / / '__|_  /        
@@ -10,12 +13,10 @@ _ __ _____      ___ __ ____
 \__|_| |_|\___|_| |_| |_|\___||___/
                       
                                
-defensive theme v1.8                                
+defensive theme v69                               
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
-<html>
-<head>
 
 <link rel="alternate" type="application/rss+xml" href="{RSS}"/>
 {block:Description}
