--- a/defensive.html
+++ b/defensive.html
@@ -591,7 +591,7 @@ font-size:10px;}
 <div class="perm2"><a href="{ReblogURL}" target="_blank">rblg</a></div>
 {/block:IndexPage}
 {block:PermalinkPage}
-<div class="post video">{Video-400}</div>
+<div class="post video" style="margin-bottom:5px;">{Video-400}</div>
 {/block:PermalinkPage}
 {/block:Video}
 
