--- a/defensive.html
+++ b/defensive.html
@@ -376,7 +376,8 @@ font-size:10px;}
     font-weight:{TitleFontWeight};
     font-size:150%;
     word-wrap:break-word;
-    padding-bottom:4px;
+    margin-bottom:8px;
+    margin-top:-5px;
     display:block;}
 {CustomCSS}
 </style>
