--- a/defensive.html
+++ b/defensive.html
@@ -645,7 +645,7 @@ font-size:10px;}
             {/block:RebloggedFrom}
             {block:NotReblog}Posted: {/block:NotReblog}{TimeAgo}{block:HasTags},&nbsp;tagged:&nbsp;
                 {block:Tags}
-                    <a {block:ifNoFollow}rel="nofollow"{/block:ifNoFollow} href="{TagURL}"> #{Tag}</a> 
+                    <a href="{TagURL}"> #{Tag}</a> 
                 {/block:Tags}
             {/block:hasTags}
             {PostNotes}
