--- a/defensive.html
+++ b/defensive.html
@@ -13,7 +13,7 @@ _ __ _____      ___ __ ____
 \__|_| |_|\___|_| |_| |_|\___||___/
                       
                                
-defensive theme v1.7.5                               
+defensive theme v1.7.6                               
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
@@ -380,6 +380,7 @@ font-size:10px;}
     margin-bottom:8px;
     margin-top:-5px;
     display:block;}
+*{word-wrap:break-word;}
 {CustomCSS}
 </style>
 
