--- a/defensive.html
+++ b/defensive.html
@@ -146,8 +146,6 @@ src: url(http://static.tumblr.com/ojd74qh/noSn5fmf6/slkscr.ttf);}
  
 -o-transition: all 0.4s ease-in-out;
 
-*{word-wrap:break-word !important;}
-
 a {text-decoration:none;
 -webkit-transition: all 0.3s ease-out;
 -moz-transition: all 0.3s ease-out;
@@ -381,6 +379,7 @@ font-size:10px;}
     margin-bottom:8px;
     margin-top:-5px;
     display:block;}
+*,p,pre,a,h1,h2,h3,h4,h5,h6,span,body{word-wrap:break-word !important;}
 {CustomCSS}
 </style>
 
