--- a/chemos.html
+++ b/chemos.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 <!--                                  
   _ __ _____      ___ __ ____        
  | '__/ _ \ \ /\ / / '__|_  /        
@@ -9,14 +12,11 @@
  | |_| | | |  __/ | | | | |  __/\__ \
   \__|_| |_|\___|_| |_| |_|\___||___/
                     
-chemos theme v1.62.8
+chemos theme v1.7
                                     
 designed by andrew manufactured by alex
 http://rowrz.tumblr.com/themes
 -->
-<!DOCTYPE html>
-<html>
-<head>
 <link rel="alternate" type="application/rss+xml" href="{RSS}"/>
 {block:Description}
             <meta name="description" content="{MetaDescription}" />
@@ -162,7 +162,7 @@ line-height:15px;
 {block:PermalinkPage}width:400px; margin-left:40px;{/block:PermalinkPage}
 border:solid 6px {color:entrybg};
 }
-
+{block:ifnotshowcaptions}
 #entry .perma{
 position:absolute;
 width: 260px;
@@ -184,16 +184,27 @@ transition: all 0.8s ease;
 }
 
 #entry:hover .perma{
-overflow:visible;
+position:absolute;
 width: 260px;
-
-opacity: 0.9;
+height: auto;
+overflow:hidden;
+bottom:0px;
+font-family: consolas;
+font-size: 12px;
+line-height:14px;
+text-align: center;
+padding:0px;
+text-transform: uppercase;
 }
 
 #entry:hover .perma:hover{
 padding-left:15px; 
 width:245px;
 opacity:1;
+}
+{/block:ifnotshowcaptions}
+#entry .perma{
+    position:abs;
 }
 
 .perm{
