updated line height

--- a/defensive.html
+++ b/defensive.html
@@ -384,8 +384,7 @@ font-size:{text:FontSize};}
     margin-top:-5px;
     display:block;}
 *,p,pre,a,h1,h2,h3,h4,h5,h6,span,body{word-wrap:break-word !important;
-        line-height:1.2;
-}
+        line-height:1.3;}
 .quote > blockquote {font-family: Georgia, Times, serif;}
 .quote > blockquote {
     border-left:none !important;
