--- a/chemos.html
+++ b/chemos.html
@@ -169,7 +169,7 @@ border:solid 6px {color:entrybg};}
 {block:ifnotShowCaptions}
     #entry .perma{
     position:absolute;
-    width: 250px;
+    width: 100%;
     height: auto;
     overflow:hidden;
     bottom:0px;
@@ -188,7 +188,7 @@ border:solid 6px {color:entrybg};}
     
     #entry:hover .perma{
     overflow:visible;
-    width: 260px;
+    width: 100%;
     opacity: 0.9;}
     
     #entry:hover .perma:hover{
@@ -199,7 +199,7 @@ border:solid 6px {color:entrybg};}
 
 {block:ifshowcaptions}
     #entry .perma{
-    width: 260px;
+    width: 100%;
     height: auto;
     overflow:hidden;
     bottom:0px;
