added noPo pre-req

--- a/chemos.html
+++ b/chemos.html
@@ -465,10 +465,10 @@ div.navi{padding-top:250px;}
 
 <div class="left">
 
-<div id="posts">
+<div id="posts" class="{block:TagPage}tag_page {/block:TagPage}{block:PermalinkPage}perma_page{/block:PermalinkPage} posts">
 
 {block:Posts}
-<div id="entry">
+<div id="entry" class="{block:IndexPage}{TagsAsClasses}{block:IndexPage} entry">
 <div class="text">
 {block:Text}
 {block:Title}<span class="title">{Title}</span>{/block:Title}
