--- a/chemos.html
+++ b/chemos.html
@@ -62,7 +62,7 @@ http://rowrz.tumblr.com/themes
 
 <meta name="if:showcaptions" content="1" />
 
-<script src="https://secure.static.tumblr.com/4ra4qv5/pVsncf5vx/jquery.1.11.0.min.chemos.js"></script>
+<script src="https://secure.static.tumblr.com/4ra4qv5/lNuncfq6c/jquery.1.11.0.min.chemos.js"></script>
 
 <style type="text/css">
 @font-face
@@ -76,8 +76,6 @@ src: url(http://static.tumblr.com/4ra4qv5/7yOn2otg5/fragmentcore.otf);
 -moz-transition: all 0.4s ease-in-out;
  
 -o-transition: all 0.4s ease-in-out;
-
-#tumblr_controls{position:fixed !important;right:104px;}
 
 a {
 text-decoration:none;
@@ -93,9 +91,10 @@ text-decoration:none;
 transition: all 0.7s ease-out;
 }
 
-iframe#tumblr_controls, #ib{
+iframe#tumblr_controls, #install-button{
 position:fixed !important;
--webkit-filter: invert(100%)
+-webkit-filter: invert(100%);
+right:104px;
 }
 
 #center{
@@ -694,5 +693,6 @@ $(document).ready(function() {
 {/block:indexpage}
 
 </div>
+
 </body>
 </html>
