added blockquote fixes

--- a/defensive.html
+++ b/defensive.html
@@ -405,6 +405,10 @@ font-size:{text:FontSize};}
 .quote.quote-body > blockquote{font-size:140%}
 .audio-embed > iframe{width:200px;}
 .audio-embed-perma > iframe{width:400px;}
+.post blockquote{
+    border-left: 3px solid #eee;
+    margin: 1em 0;
+    padding-left: 10px;}
 {CustomCSS}
 </style>
 
