preliminary fixes for chat styles

--- a/defensive.html
+++ b/defensive.html
@@ -13,7 +13,7 @@ _ __ _____      ___ __ ____
 \__|_| |_|\___|_| |_| |_|\___||___/
                       
 please do not steal nor copy without written consent                
-defensive theme v1.8.1                               
+defensive theme v1.8.2                               
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
@@ -409,6 +409,8 @@ font-size:{text:FontSize};}
     border-left: 3px solid #eee;
     margin: 1em 0;
     padding-left: 10px;}
+ul.chat{margin-left:-20px;
+    margin-top:0px;}
 {CustomCSS}
 </style>
 
