some photoset css fixes

--- a/defensive.html
+++ b/defensive.html
@@ -411,6 +411,9 @@ font-size:{text:FontSize};}
     padding-left: 10px;}
 ul.chat{margin-left:-20px;
     margin-top:0px;}
+.perma.phtst-perma{
+    margin-top:5px;
+    padding-bottom:1px;}
 {CustomCSS}
 </style>
 
