--- a/fcxn.html
+++ b/fcxn.html
@@ -9,7 +9,7 @@ _ __ _____      ___ __ ____
 | |_| | | |  __/ | | | | |  __/\__ \
 \__|_| |_|\___|_| |_| |_|\___||___/
                                 
- fcxn theme v1.9.0                                    
+ fcxn theme v1.6.0                                    
  please do not copy/steal without written consent
  designed by andrew manufactured by alex 
  http://rowrz.tumblr.com/themes
@@ -458,10 +458,10 @@ margin-right:10px;}
 
 <div class="left">
 
-<div id="posts">
+<div id="posts" class="{block:TagPage}tag_page {/block:TagPage}{block:PermalinkPage}perma_page{/block:PermalinkPage} posts">
 
 {block:Posts}
-<div id="entry">
+<div id="entry" class="{block:IndexPage}{TagsAsClasses}{block:IndexPage} entry">
 <div class="text">
 {block:Text}
 {block:Title}<span class="title">{Title}</span>{/block:Title}
