--- a/chemos.html
+++ b/chemos.html
@@ -491,10 +491,10 @@ margin-right:10px;}
 
 <div class="left">
 
-<div id="posts">
+<div id="posts" class="{block:TagPage}tag_page {/block:TagPage}{block:PermalinkPage}perma_page{/block:PermalinkPage} posts">
 
 {block:Posts}
-<div id="entry">
+<div id="entry" class="{block:IndexPage}{TagsAsClasses}{block:IndexPage} entry">
 <div class="text">
 {block:Text}
 {block:Title}<span class="title">{Title}</span>{/block:Title}
@@ -730,7 +730,6 @@ $(document).ready(function() {
 {/block:indexpage}
 
 </div>
-
 
 </body>
 </html>
