--- a/defensive.html
+++ b/defensive.html
@@ -13,7 +13,7 @@ _ __ _____      ___ __ ____
 \__|_| |_|\___|_| |_| |_|\___||___/
                       
 please do not steal nor copy without written consent                
-defensive theme v1.8.4                               
+defensive theme v1.8.6                               
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
@@ -49,7 +49,8 @@ http://rowrz.tumblr.com/themes
 <meta name="if:AskLink" content="1"/>
 <meta name="if:InfiniteScroll" content="0"/>
 <meta name="if:DescPagination" content="1"/>
-<meta name="if:2Columns" content="1"/>
+<meta name="if:MultiColumns" content="0"/>
+<meta name="if:2ColumnsOnly" content="1"/>
 <meta name="if:DescriptionUnderline" content="1"/>
 <meta name="text:FontSize" content="10px"/>
 <meta name="text:SideFontSize" content="9px"/>
@@ -69,13 +70,19 @@ http://rowrz.tumblr.com/themes
 {/block:hidden}
 <script src="https://secure.static.tumblr.com/4ra4qv5/IVEncfr25/jquery.1.11.0.min.defensive.js"></script>
 {block:Indexpage}
-    {block:if2Columns}
+    {block:ifMultiColumns}
         <script type="text/javascript" src="http://static.tumblr.com/d0qlne1/DiAl6ekb7/jquery-1.4.2.min.js"></script>
         <script src="http://static.tumblr.com/twte3d7/H8Glm663z/masonry.js"></script>
+        <script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/Qlbndcfnn/imagesloaded.pkgd.min.js"></script>
         <script type="text/javascript">
+        var $container = $('#posts');
         $(window).load(function () {
             $('#posts').masonry({
                 itemSelector: "#entry",
+                columnWidth: function( containerWidth ) {
+                    return containerWidth / 3
+                  },
+                isAnimated: true,
             },
                 function() {
                     $('#posts').masonry( { 
@@ -86,12 +93,13 @@ http://rowrz.tumblr.com/themes
             );
         });
         </script>
-    {/block:if2Columns}
+    {/block:ifMultiColumns}
     {block:ifInfiniteScroll}
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-        <script type="text/javascript" src="http://isotope.metafizzy.co/isotope.pkgd.min.js"></script>
-        <script type="text/javascript" src="http://static.tumblr.com/4ra4qv5/8N8n57y0s/infinitescroll.min.js"></script>
-        <script type="text/javascript" src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/Vhondcfma/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/sujndcfn1/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="http://static.tumblr.com/4ra4qv5/8N8n57y0s/infinitescroll.min.js"></script>
+    <script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/Qlbndcfnn/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript">
         <script type="text/javascript">
         $(document).ready(function() {
         //http://www.shambix.com/en/isotope-twitter-bootstrap-infinite-scroll-fluid-responsive-layout/
@@ -101,6 +109,7 @@ http://rowrz.tumblr.com/themes
             $container.imagesLoaded(function(){
                 $container.isotope({
                     itemSelector : '#entry',
+                    columnWidth: 70%,
                     masonry: {
                     }
                 });
@@ -167,12 +176,8 @@ text-shadow:0px 0px 20px #fff;
 transition: all 0.3s ease-out; }
 
 #tumblr_controls{position:fixed !important;right:104px;}
-
-
 #text img, #entry img {height: auto;
     max-width:100%;}
-
-.left {margin-left:400px;}
 
 #center{padding-top:3px;
 padding-bottom:3px;
@@ -185,21 +190,18 @@ width:410px;
 height:207px;
 {/block:PermalinkPage}}
 
-#posts{{block:permalinkpage}
-width:860px;
+{block:indexpage}
+    #posts{{block:ifnot2ColumnsOnly}max-width:80%{/block:ifnot2ColumnsOnly}
+    {block:ifMultiColumns}{block:if2ColumnsOnly}width:620px;{/block:if2ColumnsOnly}{/block:ifMultiColumns}
+    }
+{/block:indexpage}
+.left{margin-left:400px;}
+#posts{
+{block:permalinkpage}
+    width:860px;
 {/block:permalinkpage}
-{block:ifnot2Columns}
-    {block:indexpage}
-    width:420px;
-    {/block:indexpage}
-{/block:ifnot2Columns}
-{block:if2Columns}
-    {block:indexpage}
-        width:620px;
-    {/block:indexpage}
-{/block:if2Columns}
-margin-top: 10px;
-}
+
+margin-top: 15px;}
 
 body {padding: 0px;
 margin: 0px;
@@ -781,6 +783,17 @@ li.chat-odd{background-color:{color:Accents};}
             </script>
 {/block:IfGoogleAnalyticsID}
 
+<div style="position:fixed;bottom:5px;left:5px;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- theme button -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:125px;height:125px"
+     data-ad-client="ca-pub-6461642805771412"
+     data-ad-slot="9054274282"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
     
 </body>
 </html>
