--- a/chemos.html
+++ b/chemos.html
@@ -12,7 +12,7 @@
  | |_| | | |  __/ | | | | |  __/\__ \
   \__|_| |_|\___|_| |_| |_|\___||___/
                     
-chemos theme v1.7.5
+chemos theme v1.7.6
 please do not steal nor copy without written consent
 designed by andrew manufactured by alex
 http://rowrz.tumblr.com/themes
@@ -516,7 +516,7 @@ margin-right:10px;}
 {block:Photo}
 {block:IndexPage}{LinkOpenTag}<div class="photo"><img class="photo" src="{PhotoURL-HighRes}" alt="{PhotoAlt}" width="260"/></div>{LinkCloseTag}
 {block:ifshowcaptions}{block:Caption}{Caption}{/block:Caption}{/block:ifshowcaptions}
-<div class="perma"><a href="{reblogurl}">reblog</a> &nbsp;|&nbsp; <a href="{Permalink}" target="_blank">{NoteCountWithLabel}</a></div>
+<div class="perma"><a href="{Permalink}" target="_blank">{NoteCountWithLabel}</a></div>
 {/block:IndexPage}
 {block:PermalinkPage}{LinkOpenTag}<img class="photo" src="{PhotoURL-HighRes}" alt="{PhotoAlt}" width="400"/>{LinkCloseTag}{/block:PermalinkPage}
 {/block:Photo}
@@ -686,10 +686,10 @@ margin-right:10px;}
 
 {block:NextPage}<div id="pagination"><a href="{NextPage}"></a></div>{/block:NextPage}
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
-<script type="text/javascript" src="http://isotope.metafizzy.co/isotope.pkgd.min.js"></script>
+<script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/Vhondcfma/jquery-2.1.0.min.js"></script>
+<script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/sujndcfn1/isotope.pkgd.min.js"></script>
 <script type="text/javascript" src="http://static.tumblr.com/4ra4qv5/8N8n57y0s/infinitescroll.min.js"></script>
-<script type="text/javascript" src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
+<script type="text/javascript" src="https://secure.static.tumblr.com/4ra4qv5/Qlbndcfnn/imagesloaded.pkgd.min.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
 //http://www.shambix.com/en/isotope-twitter-bootstrap-infinite-scroll-fluid-responsive-layout/
