css fixes for certain elements

--- a/defensive.html
+++ b/defensive.html
@@ -13,7 +13,7 @@ _ __ _____      ___ __ ____
 \__|_| |_|\___|_| |_| |_|\___||___/
                       
 please do not steal nor copy without written consent                
-defensive theme v1.8.6                               
+defensive theme v1.8.7                               
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
@@ -418,6 +418,12 @@ li.chat-odd{background-color:{color:Accents};}
 .perma.phtst-perma{
     margin-top:5px;
     padding-bottom:1px;}
+ol, ul{
+    margin-left:-10px;
+    margin-top:-5px;}
+pre{
+    background-color:{color:Accents};
+    padding:10px;}
 {CustomCSS}
 </style>
 
