--- a/defensive.html
+++ b/defensive.html
@@ -420,9 +420,7 @@ li.chat-odd{background-color:{color:Accents};}
 .perma.phtst-perma{
     margin-top:5px;
     padding-bottom:1px;}
-ol, ul{
-    margin-left:-10px;
-    margin-top:-5px;}
+ol, ul{margin-left:-10px;}
 pre{
     background-color:{color:Accents};
     padding:10px;}
