--- a/chemos.html
+++ b/chemos.html
@@ -442,6 +442,7 @@ div.navi{padding-top:250px;}
     
 #albumart img {float:left;
 margin-right:10px;}
+*,p,pre,a,h1,h2,h3,h4,h5,h6,span,body{word-wrap:break-word !important;}
 {CustomCSS}
 </style>
 
