--- a/defensive.html
+++ b/defensive.html
@@ -13,7 +13,7 @@ _ __ _____      ___ __ ____
 \__|_| |_|\___|_| |_| |_|\___||___/
                       
 please do not steal nor copy without written consent                
-defensive theme v1.8.7                               
+defensive theme v1.8.8                               
 designed & manufacured by alex
 http://rowrz.tumblr.com/themes
 -->
@@ -43,7 +43,8 @@ http://rowrz.tumblr.com/themes
 <meta name="if:UseAccountAvatarOnBlog" content="1"/>
 <meta name="if:ShowTitleOnBlog" content="1"/>
 <meta name="if:Borders" content="0"/>
-<meta name="image:SideImg" content="{PortraitURL-128}"/>
+<meta name="image:SideImg" content="0"/>
+<meta name="image:BackgroundImage" content="0"/>
 <meta name="if:ShowCaptions" content="0"/>
 <meta name="if:HomeLink" content="1"/>
 <meta name="if:AskLink" content="1"/>
@@ -175,6 +176,16 @@ text-shadow:0px 0px 20px #fff;
 -moz-transition: all 0.3s ease-out;
 transition: all 0.3s ease-out; }
 
+body {padding: 0px;
+margin: 0px;
+color:{color:text};
+line-height:16px;
+font-size:{text:FontSize};
+background-color: {color:Background};
+background-image:url('{image:BackgroundImage}');
+background-size:cover;
+}
+
 #tumblr_controls{position:fixed !important;right:104px;}
 #text img, #entry img {height: auto;
     max-width:100%;}
@@ -204,13 +215,6 @@ height:207px;
 {/block:permalinkpage}
 
 margin-top: 15px;}
-
-body {padding: 0px;
-margin: 0px;
-color:{color:text};
-line-height:16px;
-font-size:{text:FontSize};
-background-color: {color:Background};}
 
 #entry blockquote {border-left: solid 2px {color:Accents};
       margin: 0;
