changed desc text-align

--- a/chemos.html
+++ b/chemos.html
@@ -12,7 +12,7 @@
  | |_| | | |  __/ | | | | |  __/\__ \
   \__|_| |_|\___|_| |_| |_|\___||___/
                     
-chemos theme v1.7.6
+chemos theme v1.7.7
 please do not steal nor copy without written consent
 designed by andrew manufactured by alex
 http://rowrz.tumblr.com/themes
@@ -373,7 +373,7 @@ transition: all 0.3s linear;
     position:fixed;
     z-index:9999999999;
     width:200px;
-    text-align:justify;
+    text-align:left;
     background-color:white;
     top:110px;
     left:12%;
